<resources>
    <string name="app_name">HelloApp</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="login_greeting">Hello there! Sign in and start managing your PurpleRocket account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_message">The login and password must be equals</string>
    <string name="error_login">Occurred an error when trying to sign in</string>
    <string name="error_generic">Occurred an unexpected error</string>
    <string name="wrong_credentials">Wrong credentials. Please verify your login or password</string>
    <string name="sign_out">Sign out</string>
</resources>